Update UserTest.java